fix period integer editing support