@@ -30,13 +30,17 @@ public abstract class IntegerEditingSupport<TRow> extends GenericEditingSupport<
 
 	public IntegerEditingSupport(ColumnViewer viewer, Class<TRow> rowType) {
 		super(viewer, rowType, Integer.class);
-		// Override TextCellEditor to handle integers better
+		createEditor(viewer);
+	}
+	
+	protected void createEditor(ColumnViewer viewer) { 		
+	// Override TextCellEditor to handle doubles better
 		editor = new TextCellEditor((Composite) viewer.getControl()) {
 			@Override
 			protected void doSetValue(final Object value) {
 				if (value == null) {
 					// If value is null set to zero instead
-					super.doSetValue(String.valueOf(Integer.valueOf(0)));
+					super.doSetValue(String.valueOf(new Double(0)));
 				} else {
 					super.doSetValue(String.valueOf(value.toString()));
 				}
